--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 	</script>
 </head>
 <body onload="startGame()">
-	<h1>Clicker Game</h1>
-	<p>Total potatoess: <span id="total-clicks">0</span></p>
+	<h1>Potato Clicker</h1>
+	<p>Total potatoes: <span id="total-clicks">0</span></p>
 	<p>Potatoes per second: <span id="clicks-per-second">0</span></p>
 	<p>Upgrade price: <span id="item-price">10</span></p>
-	<button onclick="clickButton()">Click</button>
+	<button onclick="clickButton()"> | Click | </button>
 	<button onclick="buyItem()">Buy upgrade</button>
 </body>
 </html>
