--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 ﻿
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Clicker Game</title>
+	<title>Potato Clicker</title>
+	<style>
+		body {
+			margin: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			background-color: #add8e6;
+		}
+
+		.game-container {
+			text-align: center;
+		}
+	</style>
 	<script type="text/javascript">
-		var totalClicks = 0;
-		var clicksPerSecond = 0;
-		var clickInterval;
-		var itemPrice = 10;
+		let totalClicks = 0;
+		let clicksPerSecond = 0;
+		let itemPrice = 10;
+
+		function startGame() {
+			setInterval(updateClicksPerSecond, 1000);
+		}
 
 		function clickButton() {
 			totalClicks++;
 			document.getElementById("total-clicks").innerHTML = totalClicks;
 		}
 
-		function startAutoClicker() {
-			clicksPerSecond++;
+		function updateClicksPerSecond() {
+			clicksPerSecond = Math.floor(totalClicks / 10);
 			document.getElementById("clicks-per-second").innerHTML = clicksPerSecond;
 		}
 
@@ -22,29 +40,21 @@
 			if (totalClicks >= itemPrice) {
 				totalClicks -= itemPrice;
 				itemPrice += 5;
-				clicksPerSecond++;
 				document.getElementById("total-clicks").innerHTML = totalClicks;
 				document.getElementById("item-price").innerHTML = itemPrice;
-				document.getElementById("clicks-per-second").innerHTML = clicksPerSecond;
-			} else {
-				alert("Oops, looks like you dont have egnough potatoes, keep clicking!");
 			}
-		}
-
-		function startGame() {
-			clickInterval = setInterval(function() {
-				totalClicks += clicksPerSecond;
-				document.getElementById("total-clicks").innerHTML = totalClicks;
-			}, 1000);
 		}
 	</script>
 </head>
 <body onload="startGame()">
-	<h1>Potato Clicker</h1>
-	<p>Total potatoes: <span id="total-clicks">0</span></p>
-	<p>Potatoes per second: <span id="clicks-per-second">0</span></p>
-	<p>Upgrade price: <span id="item-price">10</span></p>
-	<button onclick="clickButton()"> | Click | </button>
-	<button onclick="buyItem()">Buy upgrade</button>
+	<div class="game-container">
+		<h1>Potato clicker</h1>
+		<p>Total potatoes: <span id="total-clicks">0</span></p>
+		<p>Potatoes per second: <span id="clicks-per-second">0</span></p>
+		<p>Upgrade Price: <span id="item-price">10</span></p>
+		<button onclick="clickButton()">||| Click |||</button>
+		<button onclick="buyItem()">Buy Upgrade</button>
+	</div>
 </body>
 </html>
+
