--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 </head>
 <body onload="startGame()">
 	<div class="game-container">
+		<h2>This site is currently down due to many difrent bugs, we are working to get it back up!</h2>
 		<h1>Potato clicker</h1>
 		<p>Total potatoes: <span id="total-clicks">0</span></p>
 		<p>Potatoes per second: <span id="clicks-per-second">0</span></p>
