--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 <body onload="startGame()">
 	<div class="game-container">
 		<h2>This site is currently down due to many difrent bugs, we are working to get it back up!</h2>
+		<h2>Sorry for any inconvince, please use our normal clicker game until further notice. Thanks. -Potato Tech</h2>
+<a href="https://scratch.mit.edu/projects/748260995/">Click here, for clicker game</a>
 		<h1>Potato clicker</h1>
 		<p>Total potatoes: <span id="total-clicks">0</span></p>
 		<p>Potatoes per second: <span id="clicks-per-second">0</span></p>
